[package]
name = "mnemonic2address"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = "0.29.0"
tiny-bip39 = "1.0.0"
hex = "0.4"
ring = "0.17.8"
bs58 = "0.5.1"
bitcoin_hashes = "0.14.0"
tiny-keccak =  { version = "2.0.0", features = ["keccak"] }
